feat: anggota kelompok

--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
         </thead>
         <tbody class="font-semibold">
           <tr>
+            <td class="border">Wulan kristiyanti</td>
+            <td class="border">21.11.3924</td>
+            <td class="border">21 IF 02</td>
+          </tr>
+          <tr>
+            <td class="border">Dahniar</td>
+            <td class="border">21.11.3925</td>
+            <td class="border">21 IF 02</td>
+          </tr>
+          <tr>
             <td class="border">Gilang Ramadhani</td>
             <td class="border">21.11.3946</td>
             <td class="border">21 IF 02</td>
