--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Logo And Brand End -->
         <!-- Menu List Start -->
         <ul
-          class="md:flex md:w-fit md:h-fit md:flex-row md:justify-normal md:static md:gap-x-10 md:bg-transparent md:font-poppins md:text-base text-xl flex flex-col w-screen h-screen justify-evenly items-center absolute top-0 left-0 bg-[#AFD198] transition-all duration-500 md:translate-x-0 translate-x-full"
+          class="md:flex md:w-fit md:h-fit md:flex-row md:justify-normal md:static md:gap-x-10 md:bg-transparent md:font-poppins md:text-base text-xl hidden flex-col w-screen h-screen justify-evenly items-center absolute top-0 left-0 bg-[#AFD198] transition-all duration-500 md:translate-x-0 translate-x-full"
           id="menu-list"
         >
           <li class="hover:font-semibold"><a href="#banner">BERANDA</a></li>
